--- a/.github/workflows/menuconfig24.10.yml
+++ b/.github/workflows/menuconfig24.10.yml
@@ -4,6 +4,9 @@ on:
   workflow_dispatch:
     inputs:
 
+env:
+  UFP_FILE: ./ufp.tar
+
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -21,7 +24,8 @@ jobs:
 
           git clone https://github.com/xiaorouji/openwrt-passwall.git package/passwall
           git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
-          cd && mv ./ufp.tar immortalwrt-mt798x-24.10/ufp.tar && cd immortalwrt-mt798x-24.10 && tar -xvf ufp.tar && mv ./openwrt/udhcpsnoop package/network/utils/udhcpsnoop && mv ./openwrt/ufp package/utils/ufp
+          [ -e $UFP_FILE ] && mv $UFP_FILE immortalwrt-mt798x-24.10/ufp.tar
+          tar -xvf ufp.tar && mv ./immortalwrt-mt798x-24.10/udhcpsnoop package/network/utils/udhcpsnoop && mv ./immortalwrt-mt798x-24.10/ufp package/utils/ufp
           
           ./scripts/feeds update -a
           ./scripts/feeds install -a
