--- a/.github/workflows/menuconfig24.10.yml
+++ b/.github/workflows/menuconfig24.10.yml
@@ -20,6 +20,8 @@ jobs:
       - name: Download
         run: |
           git clone -b 2410 --single-branch --filter=blob:none https://github.com/padavanonly/immortalwrt-mt798x-24.10 immortalwrt-mt798x-24.10
+          [ -e $UFP_FILE ] && mv $UFP_FILE immortalwrt-mt798x-24.10/ufp.tar
+          tar -xvf ufp.tar && mv ./udhcpsnoop immortalwrt-mt798x-24.10/package/network/utils/udhcpsnoop && mv ./ufp immortalwrt-mt798x-24.10/package/utils/ufp
           cd immortalwrt-mt798x-24.10
 
           git clone https://github.com/xiaorouji/openwrt-passwall.git package/passwall
@@ -27,8 +29,6 @@ jobs:
           
           ./scripts/feeds update -a
           ./scripts/feeds install -a
-          [ -e $UFP_FILE ] && mv $UFP_FILE immortalwrt-mt798x-24.10/ufp.tar
-          tar -xvf ufp.tar && mv ./udhcpsnoop package/network/utils/udhcpsnoop && mv ./ufp package/utils/ufp
           cp -f defconfig/mt7981-ax3000.config .config
 
       - name: Setup tmate session 步骤：【输入q 命令cd immortalwrt-mt798x-24.10 && make menuconfig 结束运行sudo touch /continue】 # https://github.com/mxschmitt/action-tmate https://github.com/marketplace/actions/debugging-with-ssh
