--- a/.github/workflows/padavanonly.yml
+++ b/.github/workflows/padavanonly.yml
@@ -45,9 +45,7 @@ jobs:
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         chmod +x $DIY_P1_SH
-        mv ./config/ufp.tar openwrt/ufp.tar
         cd openwrt
-        tar -xvf ufp.tar && mv ./udhcpsnoop package/network/utils/udhcpsnoop && mv ./ufp package/utils/ufp
         $GITHUB_WORKSPACE/$DIY_P1_SH
 
     - name: Update feeds
@@ -61,7 +59,9 @@ jobs:
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x $DIY_P2_SH
+        #mv ./config/ufp.tar openwrt/ufp.tar
         cd openwrt
+        #tar -xvf ufp.tar && mv ./udhcpsnoop package/network/utils/udhcpsnoop && mv ./ufp package/utils/ufp
         $GITHUB_WORKSPACE/$DIY_P2_SH
 
     - name: Download package
