--- a/.github/workflows/menuconfig24.10.yml
+++ b/.github/workflows/menuconfig24.10.yml
@@ -9,23 +9,35 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@main
+
+      - uses: actions/setup-go@v5
+        with:
+          go-version: 'stable'
+      - run: go version
 
       - name: environment
-        run: sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.org/init_build_environment.sh)'
+        run: |
+          sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          sudo -E apt-get -qq update
+          sudo -E apt-get -qq install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev libreadline-dev libssl-dev libtool lrzsz mkisofs msmtp ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev clang g++ libncurses-dev python3-distutils file gcc-aarch64-linux-gnu clang-6.0 devscripts debhelper libjson-c-dev pkg-config
+          sudo -E apt-get -qq autoremove --purge
+          sudo -E apt-get -qq clean
 
       - name: Download
         run: |
-          git clone -b 2410 --single-branch --filter=blob:none https://github.com/padavanonly/immortalwrt-mt798x-24.10 immortalwrt-mt798x-24.10
+          git clone -b 2410 https://github.com/padavanonly/immortalwrt-mt798x-24.10 immortalwrt-mt798x-24.10
           #mv ./config/ufp.tar immortalwrt-mt798x-24.10/ufp.tar
           cd immortalwrt-mt798x-24.10
-          git clone https://github.com/xiaorouji/openwrt-passwall.git package/passwall
-          git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
           echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main" >> "feeds.conf.default"
           echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> "feeds.conf.default"
           #tar -xvf ufp.tar && mv ./udhcpsnoop package/network/utils/udhcpsnoop && mv ./ufp package/utils/ufp
           ./scripts/feeds update -a
           ./scripts/feeds install -a
+          git clone https://github.com/xiaorouji/openwrt-passwall.git package/passwall
+          git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
           cp -f defconfig/mt7981-ax3000.config .config
 
       - name: Setup tmate session 步骤：【输入q 命令cd immortalwrt-mt798x-24.10 && make menuconfig 结束运行sudo touch /continue】 # https://github.com/mxschmitt/action-tmate https://github.com/marketplace/actions/debugging-with-ssh
