--- a/.github/workflows/padavanonly.yml
+++ b/.github/workflows/padavanonly.yml
@@ -27,6 +27,7 @@ jobs:
     - uses: actions/setup-go@v5
       with:
         go-version: '1.24.2'
+        check-latest: true
     - run: go version
 
     - name: Initialization environment
