--- a/.github/workflows/padavanonly.yml
+++ b/.github/workflows/padavanonly.yml
@@ -26,7 +26,7 @@ jobs:
 
     - uses: actions/setup-go@v5
       with:
-        go-version: '1.24.2'
+        go-version: 1.24.0
         check-latest: true
     - run: go version
 
