--- a/.github/workflows/padavanonly.yml
+++ b/.github/workflows/padavanonly.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
@@ -26,7 +26,7 @@ jobs:
 
     - uses: actions/setup-go@v5
       with:
-        go-version: 1.24.0
+        go-version: '1.24'
         check-latest: true
     - run: go version
 
