--- a/.github/workflows/menuconfig24.10.yml
+++ b/.github/workflows/menuconfig24.10.yml
@@ -39,12 +39,13 @@ jobs:
       run: |
         git clone -b 2410 https://github.com/padavanonly/immortalwrt-mt798x-24.10 immortalwrt-mt798x-24.10
         cd immortalwrt-mt798x-24.10
-        git clone https://github.com/xiaorouji/openwrt-passwall.git package/passwall
-        git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
+        #git clone https://github.com/xiaorouji/openwrt-passwall.git package/passwall
+        #git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
         echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main" >> "feeds.conf.default"
         echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> "feeds.conf.default"
         ./scripts/feeds update -a
         ./scripts/feeds install -a
+        git clone https://github.com/immortalwrt/packages.git immortalwrt-packages && rm -rf ./feeds/packages/lang/golang && mv ./immortalwrt-packages/lang/golang feeds/packages/lang/golang && rm -rf ./immortalwrt-packages
         cp -f defconfig/mt7981-ax3000.config .config
 
     - name: Setup tmate session 步骤：【输入q 命令cd immortalwrt-mt798x-24.10 && make menuconfig 结束运行sudo touch /continue】 # https://github.com/mxschmitt/action-tmate https://github.com/marketplace/actions/debugging-with-ssh
