--- a/.github/workflows/menuconfig24.10.yml
+++ b/.github/workflows/menuconfig24.10.yml
@@ -39,10 +39,10 @@ jobs:
       run: |
         git clone -b 2410 https://github.com/padavanonly/immortalwrt-mt798x-24.10 immortalwrt-mt798x-24.10
         cd immortalwrt-mt798x-24.10
-        #git clone https://github.com/xiaorouji/openwrt-passwall.git package/passwall
-        #git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
-        echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main" >> "feeds.conf.default"
-        echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> "feeds.conf.default"
+        # git clone https://github.com/xiaorouji/openwrt-passwall.git package/passwall
+        # git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
+        echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main" >> "feeds.conf.override"
+        echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> "feeds.conf.override"
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         git clone https://github.com/immortalwrt/packages.git immortalwrt-packages && rm -rf ./feeds/packages/lang/golang && mv ./immortalwrt-packages/lang/golang feeds/packages/lang/golang && rm -rf ./immortalwrt-packages
