--- a/.github/workflows/hanwckf.yml
+++ b/.github/workflows/hanwckf.yml
@@ -22,7 +22,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@v4
 
     - uses: actions/setup-go@v5
       with:
