--- a/.github/workflows/menuconfig.yml
+++ b/.github/workflows/menuconfig.yml
@@ -38,6 +38,13 @@ jobs:
           cd immortalwrt-mt798x
           ./scripts/feeds update -a
           ./scripts/feeds install -a
+          sed -i 's/192.168.1.1/192.168.3.1/' package/base-files/files/bin/config_generate
+          sed -i 's/ImmortalWrt/OpenWrt/' package/base-files/files/bin/config_generate
+          sed -i 's/ImmortalWrt-2.4G/NW2.4G/' package/mtk/applications/mtwifi-cfg/files/mtwifi.sh
+          sed -i 's/ImmortalWrt-5G/NW/' package/mtk/applications/mtwifi-cfg/files/mtwifi.sh
+          sed -i 's/ImmortalWrt-6G/NW6G/' package/mtk/applications/mtwifi-cfg/files/mtwifi.sh
+          sed -i 's/encryption=none/encryption=sae-mixed/' package/mtk/applications/mtwifi-cfg/files/mtwifi.sh
+          sed -i '/encryption=sae-mixed/a \ \ \ \ set wireless.default_${dev}.key=blue1235' package/mtk/applications/mtwifi-cfg/files/mtwifi.sh
           git clone https://github.com/xiaorouji/openwrt-passwall.git package/passwall
           git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
           rm -rf ./feeds/luci/applications/luci-app-passwall && cp -r ./package/passwall/luci-app-passwall ./feeds/luci/applications/luci-app-passwall
@@ -46,9 +53,20 @@ jobs:
           rm -rf ./feeds/packages/net/ipt2socks && cp -r ./package/passwall-packages/ipt2socks ./feeds/packages/net/ipt2socks
           rm -rf ./feeds/packages/net/microsocks && cp -r ./package/passwall-packages/microsocks ./feeds/packages/net/microsocks
           rm -rf ./feeds/packages/net/tcping && cp -r ./package/passwall-packages/tcping ./feeds/packages/net/tcping
+          rm -rf ./feeds/packages/net/sing-box && cp -r ./package/passwall-packages/sing-box ./feeds/packages/net/sing-box
           rm -rf ./feeds/packages/net/xray-core && cp -r ./package/passwall-packages/xray-core ./feeds/packages/net/xray-core
           rm -rf ./feeds/packages/net/v2ray-geodata && cp -r ./package/passwall-packages/v2ray-geodata ./feeds/packages/net/v2ray-geodata
           rm -rf ./feeds/packages/net/v2ray-plugin && cp -r ./package/passwall-packages/v2ray-plugin ./feeds/packages/net/v2ray-plugin
+          rm -rf ./feeds/packages/net/hysteria && cp -r ./package/passwall-packages/hysteria ./feeds/packages/net/hysteria
+          rm -rf ./feeds/packages/net/naiveproxy && cp -r ./package/passwall-packages/naiveproxy ./feeds/packages/net/naiveproxy
+          rm -rf ./feeds/packages/net/shadowsocks-libev && cp -r ./package/passwall-packages/shadowsocks-libev ./feeds/packages/net/shadowsocks-libev
+          rm -rf ./feeds/packages/net/shadowsocks-rust && cp -r ./package/passwall-packages/shadowsocks-rust ./feeds/packages/net/shadowsocks-rust
+          rm -rf ./feeds/packages/net/shadowsocksr-libev && cp -r ./package/passwall-packages/shadowsocksr-libev ./feeds/packages/net/shadowsocksr-libev
+          rm -rf ./feeds/packages/net/simple-obfs && cp -r ./package/passwall-packages/simple-obfs ./feeds/packages/net/simple-obfs
+          rm -rf ./feeds/packages/net/trojan-plus && cp -r ./package/passwall-packages/trojan-plus ./feeds/packages/net/trojan-plus
+          rm -rf ./feeds/packages/net/tuic-client && cp -r ./package/passwall-packages/tuic-client ./feeds/packages/net/tuic-client
+          rm -rf ./feeds/packages/net/xray-plugin && cp -r ./package/passwall-packages/xray-plugin ./feeds/packages/net/xray-plugin
+          cp -r ./package/passwall-packages/geoview ./feeds/packages/net/geoview
           git clone https://github.com/immortalwrt/packages.git immortalwrt-packages && rm -rf ./feeds/packages/lang/golang && mv ./immortalwrt-packages/lang/golang feeds/packages/lang/golang && rm -rf ./immortalwrt-packages
           cp -f defconfig/mt7981-ax3000.config .config
 
