--- a/.github/workflows/hanwckf.yml
+++ b/.github/workflows/hanwckf.yml
@@ -29,11 +29,11 @@ jobs:
         go-version: 'stable'
     - run: go version
 
-    - name: Install UPX
-      uses: crazy-max/ghaction-upx@v3
-      with:
-        version: latest
-        install-only: true
+#    - name: Install UPX
+#      uses: crazy-max/ghaction-upx@v3
+#      with:
+#        version: latest
+#        install-only: true
 
     - name: Initialization environment
       env:
